# apm

./: pyproject.toml
.github/workflows/: ci.yml
src/apm_cli/commands/: install.py
src/apm_cli/commands/compile/: cli.py
src/apm_cli/commands/marketplace/: __init__.py  publish_helpers.py
src/apm_cli/install/: manifest_update.py  request.py  rollback.py  services.py  validation.py
src/apm_cli/install/mcp/: command.py  conflicts.py  handler.py
src/apm_cli/install/phases/: resolve.py
src/apm_cli/integration/: mcp_integrator.py  mcp_integrator_install.py  mcp_stale_cleanup.py  skill_helpers.py  skill_integrator.py
src/apm_cli/marketplace/: publisher.py  semver.py
src/apm_cli/models/dependency/: formatting.py  gitlab_shorthand.py  reference.py
src/apm_cli/policy/: policy_checks.py
